--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@ background-image: linear-gradient(45deg, #02e46a 0%, #e2db1a 100%);
   box-shadow: 0.025em 0.025em 0.15em rgba(0, 0, 0, 0.45);
   cursor: pointer;
 }
+.portfolio-card-2-icons [class*="fa-facebook-square"] {
+  background: linear-gradient(45deg, #455cff, #122fff, #001081);
+}
 .portfolio-card-2-icons [class*="fa-instagram"] {
   background: linear-gradient(45deg, #fcb045, #fd1d1d, #833ab4);
 }
