--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Tentang Muhammad Rifki Sumarna</title>
 <link rel="icon" type="image/png" href="r.png"/>
 <meta name="keywords" content="Tentang Muhammad Rifki Sumarna"/>
