--- a/index.html
+++ b/index.html
@@ -2,213 +2,14 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Tentang Muhammad Rifki Sumarna</title>
-<link rel="icon" type="image/png" href="r.png"/>
-<meta name="keywords" content="Tentang Muhammad Rifki Sumarna"/>
-<meta name="description" content="Halo nama saya Muhammad Rifki Sumarna"/>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes"/>
+<title>Statistik</title>
+<link rel="icon" type="image/png" href="favicon.ico"/>
 <style>
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,700");
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  width: 100vw;
-  height: 100vh;
-  font-family: Montserrat;
-}
-.container {
-  width: 100%;
-  height: 100%;
-  background-color: #85FFBD;
-background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
-  background-size: 200%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  animation: cont 10000ms ease-in-out infinite alternate;
-}
-@keyframes cont {
-  from {
-    background-position: top left;
-  }
-  to {
-    background-position: bottom right;
-  }
-}
-.portfolio-card {
-  width: 70%;
-  max-height: 50%;
-  background-color: #02e46a;
-background-image: linear-gradient(45deg, #02e46a 0%, #e2db1a 100%);
 
-  border-radius: 0.5em;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  padding: 1em;
-  border: 2px solid #02e46a;
-  color: #000;
-}
-.portfolio-card-1 {
-  display: flex;
-  align-items: center;
-  padding-bottom: 1em;
-  border-bottom: 1px solid #fff3;
-}
-.portfolio-card-1-col {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.portfolio-card-1-col img {
-  width: 6em;
-  height: 6em;
-  border-radius: 50%;
-  background: #f1f1f1;
-  border: 6px solid #02e46a;
-  box-shadow: 0.125em 0.125em 0.5em rgba(0, 0, 0, 0.45);
-}
-.portfolio-card-1-col-2 {
-  width: 50%;
-}
-.portfolio-card-1-col-2 h2 {
-  font-size: medium;
-}
-.portfolio-card-1-col-2 p {
-  text-align: justify;
-}
-.portfolio-card-2 {
-  padding-top: 1em;
-  display: flex;
-  align-items: center;
-}
-.portfolio-card-2 span {
-  text-transform: uppercase;
-  width: 50%;
-  text-align: center;
-}
-.portfolio-card-2-icons {
-  display: flex;
-  width: 50%;
-  justify-content: space-around;
-  /*   grid-template-columns: repeat(5, 1fr); */
-  /*   grid-gap: 1em; */
-  /*   place-items: center; */
-}
-.portfolio-card-2-icons i {
-  height: 2em;
-  width: 2em;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid #f1f1f1;
-  color: #f1f1f1;
-  box-shadow: 0.025em 0.025em 0.15em rgba(0, 0, 0, 0.45);
-  cursor: pointer;
-}
-.portfolio-card-2-icons [class*="fa-facebook-square"] {
-  background: linear-gradient(45deg, #455cff, #122fff, #001081);
-}
-.portfolio-card-2-icons [class*="fa-instagram"] {
-  background: linear-gradient(45deg, #fcb045, #fd1d1d, #833ab4);
-}
-.portfolio-card-2-icons [class*="fa-twitter"] {
-  background: linear-gradient(to right, #50c9c3, #96deda);
-}
-.portfolio-card-2-icons [class*="fa-github"] {
-  background: linear-gradient(to right, #000000, #000000);
-}
-.portfolio-contact-part {
-  display: none;
-}
-.viewport {
-  display: none;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 70%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  font-size: larger;
-}
-/*======Media  Queries======*/
-@media screen and (max-width: 768px) {
-  .portfolio-card-1 {
-    flex-direction: column;
-  }
-  .portfolio-card-1-col,
-  .portfolio-card-1-col-2 {
-    width: 100% !important;
-  }
-  .portfolio-card {
-    padding: 0.25em;
-    max-height: 90%;
-  }
-  .portfolio-card-1-col-2 h2 {
-    text-align: center;
-  }
-  .portfolio-card-2 {
-    flex-direction: column;
-  }
-  .portfolio-card-2-icons,
-  .portfolio-card-2 span {
-    width: 70% !important;
-    margin: 0.5em 0;
-  }
-}
-@media screen and (max-width: 360px) {
-  body :not(.viewport) {
-    display: none;
-  }
-  .viewport {
-    display: block !important;
-  }
-}
-.credit a{
-    text-decoration: none;
-    color: #000;
-    font-weight: 900;
-  }
-
-  .credit {
-      margin-top: 20px;
-      text-align: center;
-  }
 </style>
 </head>
 <body>
-<div class="viewport">Ukuran layar anda tidak mendukung.</div>
-    <div class="container">
-      <div class="portfolio-card">
-        <div class="portfolio-card-1">
-          <div class="portfolio-card-1-col">
-          <img src="rifki.png" alt="wajah saya">
-          <h1>Halo!</h1>
-          </div>
-          <br>
-          <div class="portfolio-card-1-col-2">
-          <h2>Muhammad Rifki Sumarna</h2>
-          <br>
-          <p>Saya lahir di Subang pada tanggal 13 Desember 2005. Alamat saya di kampung palasari, tanjungwangi, cijambe, subang, jawa barat.</p>
-          </div>
-        </div>
-        <div class="portfolio-card-2">
-          <div class="portfolio-card-2-icons">
-            <a href="https://facebook.com/ikiiii.rifki"><i class = "fa fa-facebook-square"></i></a>
-            <a href="https://instagram.com/_.ikiiii"><i class = "fa fa-instagram"></i></a>
-            <a href="https://twitter.com/rifkiizz"><i class = "fa fa-twitter"></i></a>
-            <a href="https://github.com/ikiitech"><i class = "fa fa-github"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="credit">Powered by <a  href="https://pages.github.com">Github Pages</a></div>
-    </div>
+<h1 align="center">Sedang maintenance</h1>
 </body>
 </html>
