--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
 <title>Statistik</title>
 <link rel="icon" type="image/png" href="favicon.ico"/>
 <style>
-
+.title {
+  text-decoration-line: underline;
+}
 </style>
 </head>
 <body>
-<h1 align="center">Sedang maintenance</h1>
+<br/>
+<br/>
+<h1 class="title" align="center">Statistik website</h1>
+<iframe src="https://stats.rifkiweb.eu.org?hideui=1"></iframe>
+<h1 class="title" style="padding-top: 100px" align="center">Statistik blog</h1>
+<iframe src="https://stats.rifkiblog.eu.org?hideui=1"></iframe>
 </body>
 </html>
