--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <br/>
 <br/>
 <h1 class="title" align="center">Statistik website</h1>
-<iframe src="https://stats.rifkiweb.eu.org?hideui=1"></iframe>
+<iframe src="https://rifkiweb.goatcounter.com/?hideui=1" frameborder="0" allowfullscreen></iframe>
 <h1 class="title" style="padding-top: 100px" align="center">Statistik blog</h1>
-<iframe src="https://stats.rifkiblog.eu.org?hideui=1"></iframe>
+<iframe src="https://rifkiblog.goatcounter.com/?hideui=1" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
