--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <br/>
 <br/>
 <h1 class="title" align="center">Statistik website</h1>
-<iframe src="https://rifkiweb.goatcounter.com/?hideui=1" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://rifkiweb.goatcounter.com/?hideui=1" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allowfullscreen></iframe>
 <h1 class="title" style="padding-top: 100px" align="center">Statistik blog</h1>
-<iframe src="https://rifkiblog.goatcounter.com/?hideui=1" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://rifkiblog.goatcounter.com/?hideui=1" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
