--- a/index.html
+++ b/index.html
@@ -6,17 +6,31 @@
 <title>Statistik</title>
 <link rel="icon" type="image/png" href="favicon.ico"/>
 <style>
-.title {
-  text-decoration-line: underline;
+.button {
+  background-color: black;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+}
+
+.button1 {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 </style>
 </head>
 <body>
 <br/>
 <br/>
-<h1 class="title" align="center">Statistik website</h1>
-<iframe src="https://rifkiweb.goatcounter.com/?hideui=1" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allowfullscreen></iframe>
-<h1 class="title" style="padding-top: 100px" align="center">Statistik blog</h1>
-<iframe src="https://rifkiblog.goatcounter.com/?hideui=1" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allowfullscreen></iframe>
+<h2 align="center">Statistik</h2>
+<button class="button button1" onclick="window.open('/web.html')">Website</button><br/><br/>
+<button class="button button1" onclick="window.open('/blog.html')">Blog</button>
 </body>
 </html>
