--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 .button {
   background-color: black;
   border: none;
+  align-items: center;
+  justify-content: center;
   color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: flex;
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
