--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
   -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
 }
-
 .button1 {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
@@ -32,7 +31,9 @@
 <br/>
 <br/>
 <h2 align="center">Statistik</h2>
+<p align="center">
 <button class="button button1" onclick="window.open('/web.html')">Website</button><br/><br/>
 <button class="button button1" onclick="window.open('/blog.html')">Blog</button>
+</p>
 </body>
 </html>
