--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 .button {
   background-color: black;
   border: none;
+  border-radius: 25px;
   color: white;
   padding: 15px 32px;
   text-align: center;
