--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Statistik</title>
 <link rel="icon" type="image/png" href="favicon.ico"/>
 <style>
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 .title {
   text-decoration-line: underline;
 }
@@ -29,7 +30,7 @@
 }
 </style>
 </head>
-<body>
+<body style="font-family: Poppins;">
 <br/>
 <br/>
 <h1 class="title" align="center">Statistik</h1>
