--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,6 @@
 <link rel="icon" type="image/png" href="favicon.ico"/>
 </head>
 <body>
-<iframe src="https://rifkiweb.goatcounter.com/?hideui=1" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://rifkiblog.goatcounter.com/?hideui=1" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
