--- a/index.html
+++ b/index.html
@@ -7,36 +7,13 @@
 <link rel="icon" type="image/png" href="favicon.ico"/>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
-.title {
-  text-decoration-line: underline;
-}
-.button {
-  background-color: black;
-  border: none;
-  border-radius: 25px;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: absolute;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
-}
-.button1 {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-}
 </style>
 </head>
 <body style="font-family: Poppins;">
 <br/>
 <br/>
-<h1 class="title" align="center">Statistik</h1>
-<p align="center">
-<button class="button button1" onclick="window.open('/web.html')">Website</button><br/><br/>
-<button class="button button1" onclick="window.open('/blog.html')">Blog</button>
-</p>
+<h1 align="center">Situs ini hanya digunakan untuk tes coding.</h1>
+<hr/>
+<h2 align="center">Kode sumber => <a href="https://github.com/ikiitech/ikiitech">Github</a></h2>
 </body>
 </html>
