--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 <br/>
 <h1 align="center">Situs ini hanya digunakan untuk tes coding.</h1>
 <hr/>
-<h2 align="center">Kode sumber => <a href="https://github.com/ikiitech/ikiitech">Github</a></h2>
+<h2 align="center">Kode sumber => <a href="https://github.com/ikiitech/ikiitech" target="_blank">Github</a></h2>
 </body>
 </html>
