--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body style="font-family: Poppins;">
 <br/>
 <br/>
-<h1 align="center">Situs ini hanya digunakan untuk tes coding.</h1>
+<marquee><h1>Situs ini hanya digunakan untuk tes coding.</h1></marquee>
 <hr/>
 <h2 align="center">Kode sumber => <a href="https://github.com/ikiitech/ikiitech" target="_blank">Github</a></h2>
 </body>
