--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="service-card">
                         <div class="body">
-                            <img src="assets/imgs/dhcp.png" class="icon">
-                            <h6 class="title">DHCP Server</h6>
-                            <p class="subtitle">Dynamic Host Configuration Protocol (DHCP) Adalah Protokol Yang Memungkinkan Server Untuk Mendistribusikan Alamat IP Secara Dinamis Kepada Klien.</p>
+                            <img src="assets/imgs/mail.png" class="icon">
+                            <h6 class="title">Mail Server</h6>
+                            <p align="justify" class="subtitle">Mail server adalah sebuah layanan yang membantu dalam pendistribusian email, baik dalam proses mengirim atau menerima.</p>
                         </div>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
                         <div class="body">
                             <img src="assets/imgs/ftp.png" class="icon">
                             <h6 class="title">FTP Server</h6>
-                            <p class="subtitle">FTP Server Adalah Server Yang Memberikan Layanan Untuk Melakukan Penukaran File Dari Permintaan FTP Client.</p>
+                            <p align="justify" class="subtitle">FTP Server Adalah Server Yang Memberikan Layanan Untuk Melakukan Penukaran File Dari Permintaan FTP Client.</p>
                         </div>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                         <div class="body">
                             <img src="assets/imgs/web.png" class="icon">
                             <h6 class="title">Web Server</h6>
-                            <p class="subtitle">Web Server Adalah Sebuah Layanan Yang Berfungsi Untuk Menerima Permintaan Klien Melalui protokol HTTP / HTTPS Dalam Bentuk Halaman Web.</p>
+                            <p align="justify" class="subtitle">Web Server Adalah Sebuah Layanan Yang Berfungsi Untuk Menerima Permintaan Klien Melalui protokol HTTP / HTTPS Dalam Bentuk Halaman Web.</p>
                         </div>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                         <div class="body">
                             <img src="assets/imgs/dns.png" class="icon">
                             <h6 class="title">DNS Server</h6>
-                            <p class="subtitle">DNS Adalah Server Yang Bisa Melayani Permintaan Untuk Mengetahui Sebuah IP Address Yang Digunakan Oleh Suatu Domain.</p>
+                            <p align="justify" class="subtitle">DNS Adalah Server Yang Bisa Melayani Permintaan Untuk Mengetahui Sebuah IP Address Yang Digunakan Oleh Suatu Domain.</p>
                         </div>
                     </div>
                 </div>
@@ -179,7 +179,7 @@
     <!-- contact section -->
     <section class="section" id="contact">
         <div class="container text-center">
-            <h6 class="section-title mb-5">Hubungi saya</h6>
+            <h6 class="section-title mb-5">Kotak pesan</h6>
             <!-- contact form -->
             <form class="contact-form col-md-10 col-lg-8 m-auto" action="https://formspree.io/f/mdovwarq" method="post">
                 <div class="form-row">
@@ -209,7 +209,7 @@
                 <a href="https://instagram.com/_.ikiiii" target="_blank" class="link"><i class="ti-instagram"></i></a>
                 <a href="https://youtube.com/@muhammadrifkiez" target="_blank" class="link"><i class="ti-youtube"></i></a>
                 <a href="https://github.com/ikiitech" target="_blank" class="link"><i class="ti-github"></i></a>
-                <a href="https://rifkisbg.blogspot.com" target="_blank" class="link"><i class="ti-new-window"></i></a>
+                <a href="https://www.rifkiblog.my.id" target="_blank" class="link"><i class="ti-new-window"></i></a>
             </div>
         </footer>
     </div> <!-- end of page footer -->
