--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
 	<link rel="stylesheet" href="assets/css/meyawo.css">
+<style type="text/css">
+    #cssload {background:url(assets/imgs/load.svg) no-repeat center;background-color:rgb(255, 255, 255);width:100%;height:100%;position:fixed;left:0;top:0;z-index:1000;}
+</style>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
-
+    <div id='cssload'></div>
     <!-- page header -->
     <header id="home" class="header">
         <div class="overlay"></div>
@@ -223,6 +226,11 @@
 
     <!-- Meyawo js -->
     <script src="assets/js/meyawo.js"></script>
-
+    <script type='text/javascript'>
+        //<![CDATA[
+        // Loader
+        $(window).bind("load",function(){$("#cssload").delay(3000).fadeOut(500)});
+        //]]>
+        </script>
 </body>
 </html>
