--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <input type="text" name="name" size="50" class="form-control" placeholder="Nama anda" required>                 
                     </div>
                     <div class="form-group col-sm-6">
-                        <input type="email" name="email" class="form-control" placeholder="Email" requried>                 
+                        <input type="email" name="email" class="form-control" placeholder="Email" required>                 
                     </div>
                     <div class="form-group col-sm-12">
                         <textarea name="message" rows="6"   class="form-control" placeholder="Isi pesan" required></textarea>
