--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <!-- blog-wrapper -->
             <div class="blog-card">
                 <div class="blog-card-header">
-                    <img src="assets/blog/vbox.jpg" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                    <img src="assets/blog/vbox.jpg" class="blog-card-img" alt="VBOX-NETWORK-ADAPTER">
                 </div>
                 <div class="blog-card-body">
                     <h5 align="justify" class="blog-card-title">Cara membuat 2 adapter jaringan di Debian virtualbox</h6>
@@ -144,7 +144,7 @@
             <!-- blog-wrapper -->
             <div class="blog-card">
                 <div class="blog-card-header">
-                    <img src="assets/blog/debiannginx.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                    <img src="assets/blog/debiannginx.png" class="blog-card-img" alt="NGINX-DEBIAN">
                 </div>
                 <div class="blog-card-body">
                     <h5 align="justify" class="blog-card-title">Tutorial membuat web server menggunakan Nginx di Debian</h6>
@@ -161,7 +161,7 @@
             <!-- blog-wrapper -->
             <div class="blog-card">
                 <div class="blog-card-header">
-                    <img src="assets/blog/nginxwindows.jpg" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                    <img src="assets/blog/nginxwindows.jpg" class="blog-card-img" alt="NGINX-WINDOWS">
                 </div>
                 <div class="blog-card-body">
                     <h5 align="justify" class="blog-card-title">Tutorial membuat web server menggunakan Nginx di Windows</h6>
@@ -219,7 +219,7 @@
 	
 	<!-- core  -->
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js' type='text/javascript'></script>
-    <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
+    <script src="assets/vendors/bootstrap/bootstrap.bundle.min.js"></script>
 
     <!-- bootstrap 3 affix -->
 	<script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
