--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <!-- about wrapper -->
             <div class="about">
                 <div class="about-img-holder">
-                    <img src="assets/imgs/rifki.png" class="about-img" alt="FOTO-WAJAH">
+                    <img src="assets/imgs/rifki.png" class="about-img" alt="RIFKI">
                 </div>
                 <div class="about-caption">
                     <h2 class="section-title mb-3">Tentang saya</h2>
@@ -201,6 +201,16 @@
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                 <h4>Belajar bareng membuat web server & dns server di sistem operasi Debian 10 lewat VirtualBox.</h4>
+                            </span>                         
+                        </span>    
+                    </a>                     
+                </div>
+		<div class="col-md-4">
+                    <a href="assets/imgs/kegiatan3.jpg" class="portfolio-card">
+                        <img class="portfolio-card-img" src="assets/imgs/kegiatan3.jpg" class="img-responsive rounded" alt="FOTO-KEGIATAN3">
+                        <span class="portfolio-card-overlay">
+                            <span class="portfolio-card-caption">
+                                <h4>Belajar mail server, konfigurasi dns & webmail pada sistem operasi debian 10 di VirtualBox.</h4>
                             </span>                         
                         </span>    
                     </a>                     
