--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <img src="assets/imgs/kegiatan1.jpg" class="portfolio-card-img" alt="FOTO-KEGIATAN1">    
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4>Mengedit template website untuk di upload ke nginx web server di sistem operasi Windows 10.</h4>
+                                <h4 align="justify">Mengedit template website untuk di upload ke nginx web server di sistem operasi Windows 10.</h4>
                             </span>                         
                         </span>                     
                     </a>
@@ -200,7 +200,7 @@
                         <img class="portfolio-card-img" src="assets/imgs/kegiatan2.jpg" class="img-responsive rounded" alt="FOTO-KEGIATAN2">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4>Belajar bareng membuat web server & dns server di sistem operasi Debian 10 lewat VirtualBox.</h4>
+                                <h4 align="justify">Belajar bareng membuat web server & dns server di sistem operasi Debian 10 lewat VirtualBox.</h4>
                             </span>                         
                         </span>    
                     </a>                     
@@ -210,7 +210,7 @@
                         <img class="portfolio-card-img" src="assets/imgs/kegiatan3.jpg" class="img-responsive rounded" alt="FOTO-KEGIATAN3">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4>Belajar mail server, konfigurasi dns & webmail pada sistem operasi debian 10 di VirtualBox.</h4>
+                                <h4 align="justify">Belajar mail server, konfigurasi dns & webmail pada sistem operasi debian 10 di VirtualBox.</h4>
                             </span>                         
                         </span>    
                     </a>                     
@@ -230,7 +230,7 @@
                         <input type="text" name="name" size="50" class="form-control" placeholder="Nama anda" required>                 
                     </div>
                     <div class="form-group col-sm-6">
-                        <input type="email" name="email" class="form-control" placeholder="Email" required>                 
+                        <input type="email" name="email" class="form-control" placeholder="Email anda" required>                 
                     </div>
                     <div class="form-group col-sm-12">
                         <textarea name="message" rows="6"   class="form-control" placeholder="Isi pesan" required></textarea>
