--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 </style>
 <script async src="https://static.addtoany.com/menu/page.js"></script>
 </head>
-<body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
+<body data-spy="scroll" data-offset="40" id="home">
     <!-- page header -->
     <header id="home" class="header">
         <div class="overlay"></div>
