--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 }
 </style>
 <script async src="https://static.addtoany.com/menu/page.js"></script>
+<script data-goatcounter="https://webrifki.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </head>
 <body data-spy="scroll" data-offset="40" id="home">
     <!-- page header -->
@@ -111,7 +112,6 @@
             <h1 class="header-title"><span class="up">Selamat datang di</span><span class="down">website rifki</span></h1>
         </div>              
     </header><!-- end of page header -->
-
     <!-- about section -->
     <section class="section pt-0" id="about">
         <!-- container -->
@@ -133,7 +133,6 @@
             </div><!-- end of about wrapper -->
         </div><!-- end of container -->
     </section> <!-- end of about section -->
-
     <!-- service section -->
     <section class="section" id="service">
         <div class="container text-center">
@@ -178,7 +177,6 @@
             </div><!-- end of row -->
         </div>
     </section><!-- end of service section -->
-
     <!-- portfolio section -->
     <section class="section" id="portfolio">
         <div class="container text-center">
@@ -218,7 +216,6 @@
             </div><!-- end of row -->
         </div><!-- end of container -->
     </section> <!-- end of portfolio section -->
-
     <!-- contact section -->
     <section class="section" id="contact">
         <div class="container text-center">
@@ -242,7 +239,6 @@
             </form><!-- end of contact form -->
         </div><!-- end of container -->
     </section><!-- end of contact section -->
-
     <!-- footer -->
     <div class="container">
         <footer class="footer">       
@@ -253,14 +249,11 @@
 		<a class="a2a_button_github" href="https://github.com/ikiitech"></a></div>
         </footer>
     </div> <!-- end of page footer -->
-	
 	<!-- core  -->
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js' type='text/javascript'></script>
     <script src="assets/vendors/bootstrap/bootstrap.bundle.min.js"></script>
-
     <!-- bootstrap 3 affix -->
 	<script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
-
     <!-- Meyawo js -->
     <script src="assets/js/meyawo.js"></script>
 </body>
