--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Selamat datang di website saya">
-    <meta name="author" content="Muhamad Rifki Sumarna">
-    <link rel="icon" href="assets/imgs/favicon.ico" type="image/x-icon">
-    <title>RIFKIWEB | Sebuah website sederhana</title>
-    <!-- font icons -->
-    <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
-    <!-- Bootstrap + Meyawo main styles -->
-	<link rel="stylesheet" href="assets/css/meyawo.css">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="description" content="Selamat datang di website rifki">
+<meta name="author" content="Muhamad Rifki Sumarna">
+<link rel="icon" href="assets/imgs/favicon.ico" type="image/x-icon">
+<title>RIFKIWEB | Sebuah website sederhana</title>
+<!-- font icons -->
+<link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
+<!-- Bootstrap + Meyawo main styles -->
+<link rel="stylesheet" href="assets/css/meyawo.css">
 <style type="text/css">
 .link{
   padding: 15px 30px;
@@ -25,12 +25,10 @@
   font-size: medium;
   border-radius: 50px;
 }
-
 .link:hover{
 	text-decoration: none;
 	color: yellow;
 }
-
 @-webkit-keyframes wobble-to-bottom-right-on-hover {
   16.65% {
     -webkit-transform: translate(8px, 8px);
@@ -133,50 +131,6 @@
             </div><!-- end of about wrapper -->
         </div><!-- end of container -->
     </section> <!-- end of about section -->
-    <!-- service section -->
-    <section class="section" id="service">
-        <div class="container text-center">
-            <!-- row -->
-            <div class="row">
-                <div class="col-md-6 col-lg-3">
-                    <div class="service-card">
-                        <div class="body">
-                            <img src="assets/imgs/mail.png" class="icon">
-                            <h6 class="title">Mail Server</h6>
-                            <p align="justify" class="subtitle">Mail server adalah sebuah layanan yang membantu dalam pendistribusian email, baik dalam proses mengirim atau menerima.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                    <div class="service-card">
-                        <div class="body">
-                            <img src="assets/imgs/ftp.png" class="icon">
-                            <h6 class="title">FTP Server</h6>
-                            <p align="justify" class="subtitle">FTP Server Adalah Server Yang Memberikan Layanan Untuk Melakukan Penukaran File Dari Permintaan FTP Client.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                    <div class="service-card">
-                        <div class="body">
-                            <img src="assets/imgs/web.png" class="icon">
-                            <h6 class="title">Web Server</h6>
-                            <p align="justify" class="subtitle">Web Server Adalah Sebuah Layanan Yang Berfungsi Untuk Menerima Permintaan Klien Melalui protokol HTTP / HTTPS Dalam Bentuk Halaman Web.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                    <div class="service-card">
-                        <div class="body">
-                            <img src="assets/imgs/dns.png" class="icon">
-                            <h6 class="title">DNS Server</h6>
-                            <p align="justify" class="subtitle">DNS Adalah Server Yang Bisa Melayani Permintaan Untuk Mengetahui Sebuah IP Address Yang Digunakan Oleh Suatu Domain.</p>
-                        </div>
-                    </div>
-                </div>
-            </div><!-- end of row -->
-        </div>
-    </section><!-- end of service section -->
     <!-- portfolio section -->
     <section class="section" id="portfolio">
         <div class="container text-center">
