--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <img src="assets/imgs/kegiatan1.jpg" class="portfolio-card-img" alt="FOTO-KEGIATAN1">    
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4 align="justify">Mengedit template website untuk di upload ke nginx web server di sistem operasi Windows 10.</h4>
+                                <h4 align="justify">Praktik bongkar pasang PC.</h4>
                             </span>                         
                         </span>                     
                     </a>
@@ -152,7 +152,7 @@
                         <img class="portfolio-card-img" src="assets/imgs/kegiatan2.jpg" class="img-responsive rounded" alt="FOTO-KEGIATAN2">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4 align="justify">Belajar bareng membuat web server & dns server di sistem operasi Debian 10 lewat VirtualBox.</h4>
+                                <h4 align="justify">Belajar membuat web server & dns server Debian 10 VirtualBox.</h4>
                             </span>                         
                         </span>    
                     </a>                     
@@ -162,7 +162,7 @@
                         <img class="portfolio-card-img" src="assets/imgs/kegiatan3.jpg" class="img-responsive rounded" alt="FOTO-KEGIATAN3">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4 align="justify">Belajar mail server, konfigurasi dns & webmail pada sistem operasi debian 10 di VirtualBox.</h4>
+                                <h4 align="justify">Belajar membuat Wi-Fi menggunakan MikroTik RouterBOARD.</h4>
                             </span>                         
                         </span>    
                     </a>                     
