--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <img src="assets/imgs/kegiatan1.jpg" class="portfolio-card-img" alt="FOTO-KEGIATAN1">    
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4 align="justify">Praktik bongkar pasang PC.</h4>
+                                <h4 align="justify">Belajar membuat Voucher Wi-Fi menggunakan MikroTik + Mikhmon.</h4>
                             </span>                         
                         </span>                     
                     </a>
@@ -162,7 +162,7 @@
                         <img class="portfolio-card-img" src="assets/imgs/kegiatan3.jpg" class="img-responsive rounded" alt="FOTO-KEGIATAN3">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4 align="justify">Belajar membuat Wi-Fi menggunakan MikroTik RouterBOARD.</h4>
+                                <h4 align="justify">Konfigurasi NAT & Wireless Ap-bridge di MikroTik.</h4>
                             </span>                         
                         </span>    
                     </a>                     
