--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <img src="assets/imgs/kegiatan1.jpg" class="portfolio-card-img" alt="FOTO-KEGIATAN1">    
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4 align="justify">Belajar membuat Voucher Wi-Fi menggunakan MikroTik + Mikhmon.</h4>
+                                <h4 align="justify">Membuat Voucher Wi-Fi menggunakan MikroTik & Mikhmon.</h4>
                             </span>                         
                         </span>                     
                     </a>
@@ -152,7 +152,7 @@
                         <img class="portfolio-card-img" src="assets/imgs/kegiatan2.jpg" class="img-responsive rounded" alt="FOTO-KEGIATAN2">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4 align="justify">Belajar membuat web server & dns server Debian 10 VirtualBox.</h4>
+                                <h4 align="justify">Konfigurasi web server & dns server Debian 10 VirtualBox.</h4>
                             </span>                         
                         </span>    
                     </a>                     
