--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="Selamat datang di website rifki">
-<meta name="author" content="Muhamad Rifki Sumarna">
-<link rel="icon" href="assets/imgs/favicon.ico" type="image/x-icon">
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+<link rel="icon" href="assets/imgs/favicon.ico" type="image/x-icon"/>
 <title>RIFKIWEB | Sebuah website sederhana</title>
+<meta name="author" content="Muhamad Rifki Sumarna"/>
+<meta name="description" content="Selamat datang di website rifki"/>
 <!-- font icons -->
-<link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
+<link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css"/>
 <!-- Bootstrap + Meyawo main styles -->
-<link rel="stylesheet" href="assets/css/meyawo.css">
+<link rel="stylesheet" href="assets/css/meyawo.css"/>
 <style type="text/css">
 .link{
   padding: 15px 30px;
@@ -122,10 +122,10 @@
                 <div class="about-caption">
                     <h2 class="section-title mb-3">Tentang saya</h2>
                     <p align="justify">
-                        Halo, perkenalkan nama saya Muhamad Rifki Sumarna, sering dipanggil iki. Saya lahir di Subang pada tanggal 13 Desember 2005. Anak dari Bapak & Mamah yang hebat, sangat kuat nan sabar dalam hal mendidik saya, beliau adalah kedua orang tua saya, Nana Sumarna & Titin Suarsih.<br/><br/>Anak pertama dari dua bersaudara, adik saya perempuan bernama Tina Nurhasanah. Alamat saya di kampung palasari, tanjungwangi, kec. cijambe, kab. subang, jawa barat. Sekian perkenalan diri dari saya.          
-                    </p><main><div class="container py-5 text-center">
-                     <a href="https://www.rifkiblog.my.id" target="_blank" class="link wobble-to-bottom-right-on-hover">Blog</i></a>
-                      <a href="https://www.youtube.com/@muhammadrifkiez" target="_blank" class="link wobble-to-bottom-right-on-hover">YouTube</a>
+                        Halo, perkenalkan nama saya Muhamad Rifki Sumarna, sering dipanggil iki. Saya lahir di Subang pada tanggal 13 Desember 2005. Anak dari Bapak & Mamah yang hebat, sangat kuat nan sabar dalam hal mendidik saya, beliau adalah kedua orang tua saya, Nana Sumarna & Titin Suarsih.<br/><br/>Anak pertama dari dua bersaudara, adik saya perempuan bernama Tina Nurhasanah. Alamat saya di kampung palasari, tanjungwangi, kec. cijambe, kab. subang, jawa barat. Sekian perkenalan diri dari saya.</p>
+                    <main><div class="container py-5 text-center">
+                    <a href="https://www.rifkiblog.my.id" target="_blank" class="link wobble-to-bottom-right-on-hover">Blog</i></a>
+                    <a href="https://www.youtube.com/@muhammadrifkiez" target="_blank" class="link wobble-to-bottom-right-on-hover">YouTube</a>
                     </div></main>
                 </div>              
             </div><!-- end of about wrapper -->
@@ -196,9 +196,9 @@
     <!-- footer -->
     <div class="container">
         <footer class="footer">       
-            <p class="mb-0">&copy; 2023 RIFKIWEB</p>
+        <p class="mb-0">&copy; 2023 RIFKIWEB</p>
 	    <div class="a2a_kit a2a_kit_size_32 a2a_default_style a2a_follow">
-            	<a class="a2a_button_facebook" href="https://www.facebook.com/ikiiii.rifki"></a>
+        <a class="a2a_button_facebook" href="https://www.facebook.com/ikiiii.rifki"></a>
 		<a class="a2a_button_instagram" href="https://www.instagram.com/_.ikiiii"></a>
 		<a class="a2a_button_github" href="https://github.com/ikiitech"></a></div>
         </footer>
